--- a/receiver/index.html
+++ b/receiver/index.html
@@ -3,8 +3,8 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
     <title>Custom notification</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <main>
@@ -12,10 +12,8 @@
         <label for="connectionId">ConnectionId</label>
         <input id="connectionId" type="text" />
         <label for="message">Message</label>
-        <input id="message" type=text" />
-        <button id="notify">
-          Click to spawn notification
-        </button>
+        <input id="message" type="text" />
+        <button id="notify">Click to spawn notification</button>
       </section>
       <section>
         <div id="notification">
